set prettier for json file and new files for concurrent components
   add .prettierrc for json and other configure files
   add concurrent files

branch: dev
user: aitianyu.cn

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,5 +88,7 @@
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "vsicons.associations.files": [],
-    "vsicons.associations.folders": []
+    "vsicons.associations.folders": [],
+    "json.format.enable": false,
+    "prettier.configPath": "config/.prettierrc"
 }
