--- a/native/text/package.json
+++ b/native/text/package.json
@@ -1,9 +1,7 @@
 {
-    "export":
-    {
+    "export": {
         "name": "dev.tianyu.text",
-        "dependency": 
-        [
+        "dependency": [
             {
                 "name": "dev.tianyu",
                 "external": false,
@@ -11,16 +9,11 @@
             }
         ]
     },
-    "params": 
-    {
-        "version":
-        {
+    "params": {
+        "version": {
             "c++": "c++17",
             "c": "c14"
         }
     },
-    "blacklist":
-    {
-
-    }
+    "blacklist": {}
 }
