update for Console operations
    increase IToString interface and TianyuObject class to support Console.Write
    prepare guid

branch: dev
user: aitianyu.cn

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,7 +79,8 @@
         "unordered_map": "cpp",
         "utility": "cpp",
         "vector": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "__availability": "cpp"
     },
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
