finish development for guid
    1. finish guid methods
    2. support creation in windows platform

branch: dev
user: ysydty

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,7 +80,8 @@
         "utility": "cpp",
         "vector": "cpp",
         "thread": "cpp",
-        "__availability": "cpp"
+        "__availability": "cpp",
+        "format": "cpp"
     },
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
