some fixes and update all objects of native/prime
   1. move random out of internal
   2. add ToString to each class

branch: dev
user: victor.yao

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
     "C_Cpp.vcFormat.space.afterComma": true,
     "C_Cpp.default.cppStandard": "c++14",
     "C_Cpp.default.cStandard": "c11",
+    "C_Cpp.intelliSenseEngine": "Default",
+    "C_Cpp.errorSquiggles": "Enabled",
     "cmake.configureOnOpen": false,
     "files.associations": {
         "utilize.h": "cpp",
@@ -81,7 +83,30 @@
         "vector": "cpp",
         "thread": "cpp",
         "__availability": "cpp",
-        "format": "cpp"
+        "format": "cpp",
+        "*.rh": "cpp",
+        "charconv": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "forward_list": "cpp",
+        "iomanip": "cpp",
+        "map": "cpp",
+        "stop_token": "cpp",
+        "xfacet": "cpp",
+        "xiosbase": "cpp",
+        "xlocale": "cpp",
+        "xlocbuf": "cpp",
+        "xlocinfo": "cpp",
+        "xlocmes": "cpp",
+        "xlocmon": "cpp",
+        "xlocnum": "cpp",
+        "xloctime": "cpp",
+        "xmemory": "cpp",
+        "xstddef": "cpp",
+        "xstring": "cpp",
+        "xtr1common": "cpp",
+        "xtree": "cpp",
+        "xutility": "cpp"
     },
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
