--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -115,7 +115,10 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "fstream": "cpp",
+        "deque": "cpp",
+        "stack": "cpp"
     },
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
