start to develop auto tools
    1. create modules in dotnet
    2. create java infors
    3. develop the basic logic for Param processor in dotnet

branch: dev
user: victor.yao

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -129,5 +129,10 @@
     "vsicons.associations.files": [],
     "vsicons.associations.folders": [],
     "json.format.enable": false,
-    "prettier.configPath": "config/.prettierrc"
+    "prettier.configPath": "config/.prettierrc",
+    "java.autobuild.enabled": false,
+    "java.format.enabled": true,
+    "java.format.settings.url": "config/eclipse-formatter.xml",
+    "java.project.sourcePaths": ["tools/java/"],
+    "java.project.outputPath": "./tools/bin/"
 }
