--- a/tools/dotnet/Maker/Maker.csproj
+++ b/tools/dotnet/Maker/Maker.csproj
@@ -1,18 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Build\Build.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
-    <ProjectReference Include="..\Auto\Auto.csproj" />
-    <ProjectReference Include="..\Maker\Maker.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>DTY.Dotnet.Tools.Start</RootNamespace>
+    <RootNamespace>DTY.Dotnet.Tools.Maker</RootNamespace>
   </PropertyGroup>
 
 </Project>
