update core and add new data structures
	1. update test core with exception template check
	2. add bitmap implementation
	3. move ostream out from native->prime to native->io to decrease
	   base library size.
	4. modify guid/string
	5. add implementations of time/datetime

branch: dev
user: ysydty

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -118,7 +118,9 @@
         "xutility": "cpp",
         "fstream": "cpp",
         "deque": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "list": "cpp",
+        "xhash": "cpp"
     },
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
