--- a/.gitignore
+++ b/.gitignore
@@ -459,3 +459,10 @@ $RECYCLE.BIN/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+##
+## DTY Define
+##
+native/res/i18n/language.h
+
+!native/res/creater/*
