--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,18 @@ project(${PROJECT_NAME} LANGUAGES "CXX" VERSION ${PROJECT_VERSION})
 ###################################################################
 set(CMAKE_CXX_STANDARD 17)
 
+set(DTY_PROJECT_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/target)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${DTY_PROJECT_OUTPUT_PATH}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${DTY_PROJECT_OUTPUT_PATH}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${DTY_PROJECT_OUTPUT_PATH}/bin)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${DTY_PROJECT_OUTPUT_PATH}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${DTY_PROJECT_OUTPUT_PATH}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${DTY_PROJECT_OUTPUT_PATH}/bin)
+
+if (DEFINED CMAKE_BUILD_TYPE AND CMAKE_BUILD_TYPE STREQUAL Debug)
+    ADD_DEFINITIONS(-D__DTY_DEV_MODE__)
+endif ()
+
 ###################################################################
 # 进入项目构建流程
 ###################################################################
