--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ endif()
 set(DTY_PROJECT_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/target)
 # 设置通用输出目录
 set(EXECUTABLE_OUTPUT_PATH ${DTY_PROJECT_OUTPUT_PATH}/bin)
-set(LIBRARY_OUTPUT_PATH ${DTY_PROJECT_OUTPUT_PATH}/bin)
+set(LIBRARY_OUTPUT_PATH ${DTY_PROJECT_OUTPUT_PATH}/lib)
 # 设置Microsoft Visual Studio可用的输出目录
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${DTY_PROJECT_OUTPUT_PATH}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${DTY_PROJECT_OUTPUT_PATH}/lib)
