add support to export header
	1. add Export json file to config export data
	2. code changes

branch: dev
user: ysydty

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(${DTY_NATIVE_TEST_NAME}.core STATIC
 )
 
 # 导入测试程序
-add_subdirectory(prime/core ./bin/core)
+add_subdirectory(dty-core ./bin/dty-core)
+add_subdirectory(prime ./bin/prime)
 
 message("    构建-完成")
