--- a/test/prime/core/CMakeLists.txt
+++ b/test/prime/core/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(DTY_NATIVE_TEST_PRIME_CORE_NAME ${DTY_NATIVE_TEST_NAME}.prime.core)
+set(DTY_NATIVE_TEST_PRIME_CORE_NAME ${DTY_NATIVE_TEST_PRIME_NAME}.core)
 
 message("            构建: " ${DTY_NATIVE_TEST_PRIME_CORE_NAME})
 
