--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -1,12 +1,12 @@
 message("    构建: 天宇库源代码")
 
-add_subdirectory(prime/core ./lib/core)
-add_subdirectory(prime ./lib/prime)
+add_subdirectory(prime/core ./core)
+add_subdirectory(prime ./prime)
 
-add_subdirectory(io ./lib/io)
-add_subdirectory(math ./lib/math)
-add_subdirectory(model ./lib/model)
-add_subdirectory(text ./lib/text)
-add_subdirectory(thread ./lib/thread)
+add_subdirectory(io ./io)
+add_subdirectory(math ./math)
+add_subdirectory(model ./model)
+add_subdirectory(text ./text)
+add_subdirectory(thread ./thread)
 
 message("    构建-完成")
