add unit test for prime/core/formatter
	add: dty.common.native.test.prime.core.formatter

branch: dev
platform: windows
user: ysydty

--- a/test/prime/core/CMakeLists.txt
+++ b/test/prime/core/CMakeLists.txt
@@ -51,4 +51,20 @@ target_link_libraries(
     ${DTY_NATIVE_TEST_NAME}.core
 )
 
+# 构建测试 - dty.common.native.test.prime.core.formatter
+message("                执行: " ${DTY_NATIVE_TEST_PRIME_CORE_NAME}.formatter)
+add_executable(
+    ${DTY_NATIVE_TEST_PRIME_CORE_NAME}.formatter 
+    
+    formatter.cpp
+
+    ${PROJECT_SOURCE_DIR}/native/prime/core/src/formatter.cpp
+    ${PROJECT_SOURCE_DIR}/native/prime/core/src/parse.base.cpp
+)
+target_link_libraries(
+    ${DTY_NATIVE_TEST_PRIME_CORE_NAME}.formatter 
+
+    ${DTY_NATIVE_TEST_NAME}.core
+)
+
 message("            构建-完成")
