--- a/.gitignore
+++ b/.gitignore
@@ -469,6 +469,8 @@ target
 ##
 ## DTY Define
 ##
-native/res/i18n/language.h
+native/res/i18n/*.h
+
+native/res/**/*.lock.json
 
 !native/res/creater/*
