--- a/tools/package.json
+++ b/tools/package.json
@@ -4,7 +4,7 @@
     "description": "Automatic tool to build tianyu native dependency resouces and run automatically workflows.",
     "main": "index.js",
     "scripts": {
-        "build-i18n": "node ./native/res/scripts/i18n.js",
+        "build-i18n": "node ./scripts/i18n.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "aitianyu.cn",
