prepare build script
	prepare the project source paths and add npm run build

branch: dev
user: ysydty

--- a/tools/package.json
+++ b/tools/package.json
@@ -4,6 +4,7 @@
     "description": "Automatic tool to build tianyu native dependency resouces and run automatically workflows.",
     "main": "index.js",
     "scripts": {
+        "build": "node ./scripts/build.js",
         "build-i18n": "node ./scripts/i18n.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
