--- a/tools/package.json
+++ b/tools/package.json
@@ -5,8 +5,8 @@
     "main": "index.js",
     "scripts": {
         "build": "node ./scripts/build.js",
-        "build-native": "node ./scripts/build.js",
-        "build-test": "node ./scripts/build.js",
+        "build-native": "node ./scripts/build-native.js",
+        "build-test": "node ./scripts/build-test.js",
         "build-i18n": "node ./scripts/i18n.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
