--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -120,7 +120,10 @@
         "deque": "cpp",
         "stack": "cpp",
         "list": "cpp",
-        "xhash": "cpp"
+        "xhash": "cpp",
+        "*.tcc": "cpp",
+        "memory_resource": "cpp",
+        "queue": "cpp"
     },
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
