--- a/resource/features/config.json
+++ b/resource/features/config.json
@@ -5,6 +5,6 @@
             "天宇核心新功能管理组件",
             "New feature control utilities of Tianyu Core"
         ],
-        "target": "feature"
+        "target": "core"
     }
 }
