--- a/tools/package.json
+++ b/tools/package.json
@@ -8,6 +8,7 @@
         "build-native": "node ./scripts/build-native.js",
         "build-test": "node ./scripts/build-test.js",
         "build-i18n": "node ./scripts/i18n.js",
+        "build-feature": "node ./scripts/features.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "aitianyu.cn",
